--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Albatros notifier</title>
+    <title>Daily Scrum Reminder</title>
     <link href="styles/bootstrap.css" rel="stylesheet">
     <link href="styles/bootstrap-responsive.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
@@ -13,6 +13,6 @@
     <div class="well">
         <ul></ul>
     </div>
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
